# novelist

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
novelist/: __main__.py  app.py
novelist/agents/: creator_agent.py  editor_agent.py  supervisor_agent.py  writer_agent.py
novelist/configs/: llm_config.yaml  story_seed.yaml
novelist/core/: adapter.py  llm_factory.py  logging.py  workflow.py
tests/: __init__.py  conftest.py  pytest.ini  requirements-test.txt  test_creator_agent.py  test_editor_agent.py  test_integration.py  test_supervisor_agent.py  test_workflow_integration.py  test_writer_agent.py
